[package]
name = "locha-p2p"
version = "0.1.0"
authors = ["Locha Mesh Developers <contact@locha.io>"]
edition = "2018"
license = "Apache-2.0"

[workspace]
members = ["locha-p2pd", "miniupnpc", "miniupnpc-sys"]

[dependencies]
async-std = { version = "1", features = ["unstable"] }
futures = "0.3"
libp2p = "0.29"
log = "0.4"
parking_lot  = "0.11"
void = "1"
wasm-timer = "0.2"

# Not available on WASM
[target.'cfg(not(target_os = "unknown"))'.dependencies]
miniupnpc = { version = "0.1", path = "miniupnpc" }
