[package]
name = "locha-p2pd"
version = "0.1.0"
authors = ["Locha Mesh Developers <contact@locha.io>"]
edition = "2018"
description = """
Locha P2P Chat daemon
"""
readme = "../README.md"
homepage = "https://locha.io"
repository = "https://github.com/btcven/locha-p2p"
license = "Apache-2.0"
workspace = "../"

[dependencies]
clap = { version = "~2.27.0", features = ["yaml"] }
env_logger = "0.7"
futures = "0.3"
libp2p = "0.24"
locha-p2p = { version = "0.1", path = "../" }
log = "0.4"
serde = "1"
serde_json = "1"
serde_derive = "1"
async-std = { version = "1", features = ["unstable"] }
hex = "0.4"
tui = "0.10"
termion = "1"
unicode-width = "0.1"
parking_lot = "0.11"