[package]
name = "locha-p2pd"
version = "0.1.0"
authors = ["Locha Mesh Developers <contact@locha.io>"]
edition = "2018"
description = """
Locha P2P Chat daemon
"""
readme = "../README.md"
homepage = "https://locha.io"
repository = "https://github.com/btcven/locha-p2p"
license = "Apache-2.0"
workspace = "../"

[dependencies]
clap = { version = "~2.27.0", features = ["yaml"] }
env_logger = "0.7"
futures = "0.3"
libp2p = "0.29"
locha-p2p = { version = "0.1", path = "../" }
log = "0.4"
async-std = { version = "1", features = ["unstable", "attributes"] }
hex = "0.4"
rustyline = "6"
prost = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.4"
snap = "1"
rust-crypto = "^0.2"

[build-dependencies]
prost-build = "0.5"
